.helm/templates/0-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bfmarket-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: market
            port:
              number: 80
